--- a/html/stroke_editor.html
+++ b/html/stroke_editor.html
@@ -53,6 +53,7 @@ div a{
 <div class="in">
     <input id="search" placeholder="" type="text" maxlength="1" />
     <button id="gen_map_bzip2">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;(bzip2压缩)</button>
+    <button id="gen_map">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;</button>
     <button id="gen_vec">生成Vec&lt;(char, Vec&lt;(u16, u16))&gt;</button>
 </div>
 <script>
