--- a/html/stroke_editor.html
+++ b/html/stroke_editor.html
@@ -52,9 +52,13 @@ div a{
 <canvas id="canvas" width="1000" height="1000"></canvas>
 <div class="in">
     <input id="search" placeholder="" type="text" maxlength="1" />
-    <button id="gen_map_bzip2">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;(bzip2压缩)</button>
+    <button style="display:none"id="gen_map_bzip2">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;(bzip2压缩)</button>
     <button id="gen_map">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;</button>
     <button id="gen_vec">生成Vec&lt;(char, Vec&lt;(u16, u16))&gt;</button>
+</div>
+<div>
+    <input id="txt_add" placeholder="" type="text" maxlength="1" />
+    <button id="btn_add">添加</button>
 </div>
 <script>
     var Module = {};
