--- a/html/stroke_editor.html
+++ b/html/stroke_editor.html
@@ -54,7 +54,7 @@ div a{
     <input id="search" placeholder="" type="text" maxlength="1" />
     <button style="display:none"id="gen_map_bzip2">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;(bzip2压缩)</button>
     <button id="gen_map">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;</button>
-    <button id="gen_vec">生成Vec&lt;(char, Vec&lt;(u16, u16))&gt;</button>
+    <button id="gen_vec">生成Vec&lt;(char, Vec&lt;(u16, u16))&gt;(替换页面中STROKES.data)</button>
 </div>
 <div>
     <input id="txt_add" placeholder="" type="text" maxlength="1" />
