--- a/html/stroke_editor.html
+++ b/html/stroke_editor.html
@@ -48,6 +48,11 @@ div a{
     <div><button id="btn_insert_before">在前边插入</button></div>
     <div><button id="btn_insert_after">在后边插入</button></div>
     <div><button id="btn_delete">删除当前点</button></div>
+    <hr />
+    <div><button id="btn_move_forward">前移笔画</button></div>
+    <div><button id="btn_move_backward">后移笔画</button></div>
+    <hr />
+    <div><button id="btn_add_stroke">添加一笔</button></div>
 </div>
 <canvas id="canvas" width="1000" height="1000"></canvas>
 <div class="in">
