修正笔画数据，增加多笔移动功能
世 可河呵何荷嗬 走之旁（边、通）都移动到最后 熬遨敖嗷鳌傲獒螯骜邀遨鏊廒聱 耿烨华 卡 北 业 牲（牛字旁的） 犟（下边是牛的） 义 叩 叵 册 栏，兰，烂 半,伴，拌，绊 纺，放，房，防，芳，坊，仿，访，彷，舫，枋，鲂，妨，钫，肪，邡 它，驼，陀，坨，沱，佗，砣，鸵，柁，舵，跎，铊 九字旁，仇 写，与 仪，议 尼，呢，泥，妮，昵，铌，旎 出 女，女字旁的字修正 孓 装,状，壮，妆 娴，们，闷，焖，扪，门，钔 母，毒，毓，每，姆，拇，坶，梅，酶，莓，霉，侮，海

--- a/html/stroke_editor.html
+++ b/html/stroke_editor.html
@@ -52,7 +52,13 @@ div a{
     <div><button id="btn_move_forward">前移笔画</button></div>
     <div><button id="btn_move_backward">后移笔画</button></div>
     <hr />
+    <div><button id="btn_move_backward2">2笔后移</button></div>
+    <div><button id="btn_move_backward4">2笔移至最后</button></div>
+    <div><button id="btn_move_backward3">3笔后移</button></div>
+    <div><button id="btn_move_backward5">3笔移至最后</button></div>
+    <hr />
     <div><button id="btn_add_stroke">添加一笔</button></div>
+    <div><button id="btn_delete_stroke">删除一笔</button></div>
 </div>
 <canvas id="canvas" width="1000" height="1000"></canvas>
 <div class="in">
