更新笔画数据
C16囊嚷攘馕巍躏
静澹

检查修正“犹” 字之后得字

--- a/html/stroke_editor.html
+++ b/html/stroke_editor.html
@@ -16,8 +16,11 @@ body{
 #canvas{
     background:#eee; width:500px;height:500px;
 }
+#select{
+    font-family: 楷体_GB2312;
+}
 select,div.op{
-    font-size: 16pt;
+    font-size: 18pt;
     height: 500px;
     margin: 0;
     margin-left: 5pt;
