--- a/html/index.html
+++ b/html/index.html
@@ -68,21 +68,29 @@ div a{
     <input id="search" placeholder="" type="text" maxlength="1" />
     <button style="display:none"id="gen_map_bzip2">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;(bzip2压缩)</button>
     <button id="gen_map">生成HashMap&lt;char,Vec&lt;Vec&lt;(u16, u16)&gt;&gt;</button>
-    <button id="gen_vec">生成Vec&lt;(char, Vec&lt;(u16, u16))&gt;(替换页面中STROKES.data)</button>
+    <button id="gen_vec">生成Vec&lt;(char, Vec&lt;(u16, u16))&gt;</button>
+    <a style="font-size: 16pt;" id="download_button" href="javascript:;" download=""></a>
 </div>
 <div>
     <input id="txt_add" placeholder="" type="text" maxlength="1" />
     <button id="btn_add">添加</button>
 </div>
 <script>
-    var Module = {};
-    Module["TOTAL_STACK"] = 5242880*10;
-    Module["TOTAL_MEMORY"] = 16777216*10;
+    // var Module = {};
+    // Module["TOTAL_STACK"] = 5242880*10;
+    // Module["TOTAL_MEMORY"] = 16777216*10;
 
-    window.onbeforeunload = function() {
-        return "确认要离开此页面吗？";
-    };
+    // window.onbeforeunload = function() {
+    //     return "确认要离开此页面吗？";
+    // };
 </script>
-<script src="rust-stroke-editor.js"></script>
+<script type="module">
+    import('/rust_stroke_editor.js')
+    .then((module) => {
+        module.default().then(m => {
+            m.run();
+        });
+    });
+</script>
 </body>
 </html>
